--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
   },
   "devDependencies": {
     "autoprefixer": "^8.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.1",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.9",
     "cssnano": "^3.10.0",
