--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^2.30.1",
     "postcss-loader": "^2.1.0",
+    "style-loader": "^0.20.2",
     "webpack-dev-server": "^2.11.1"
   }
 }
