--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
   "dependencies": {
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.0.3",
     "vuex": "^3.0.1",
     "webpack": "^3.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^8.0.0",
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.1",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
@@ -35,7 +36,7 @@
     "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.9",
     "cssnano": "^3.10.0",
-    "eslint": "^4.18.0",
+    "eslint": "^4.18.1",
     "eslint-loader": "^1.9.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-loader": "^0.5.5",
