--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.0.3",
+    "vuetify": "^1.0.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -37,13 +37,15 @@
     "cssnano": "^3.10.0",
     "eslint": "^4.18.1",
     "eslint-loader": "^2.0.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.0.3",
     "postcss-loader": "^2.1.1",
     "style-loader": "^0.20.2",
+    "vue-loader": "^14.1.1",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.0.0"
+    "webpack-dev-server": "^3.1.0",
+    "vue-template-compiler": "^2.5.13"
   }
 }
