--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
     "eslint-loader": "^2.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.0.3",
+    "html-webpack-plugin": "^3.0.4",
     "postcss-loader": "^2.1.1",
     "style-loader": "^0.20.2",
     "vue-loader": "^14.1.1",
+    "vue-template-compiler": "^2.5.13",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
-    "webpack-dev-server": "^3.1.0",
-    "vue-template-compiler": "^2.5.13"
+    "webpack-dev-server": "^3.1.0"
   }
 }
